--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link href="/elicit.png" rel="icon" type="image/svg+xml"/>
+    <link href="/elicit.png" rel="icon" type="png"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Elicit 24</title>
+    <title>ACM Elicit'24</title>
 </head>
 <body>
 <div id="root"></div>
