--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8"/>
     <link href="/elicit.png" rel="icon" type="png"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>ACM Elicit'24</title>
+    <title>ACM Elicit'24 | Your Event for Innovation and Collaboration</title>
+    <meta name="description" content="Join ACM Elicit'24 for an innovative experience in technology and collaboration. Explore our upcoming events, gallery, and team details." />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="ACM Elicit'24 | Your Event for Innovation and Collaboration" />
+    <meta property="og:description" content="Join ACM Elicit'24 for an innovative experience in technology and collaboration." />
+    <meta property="og:image" content="/elicit.png" />
+    <meta property="og:url" content="https://acm-elicit.xyz" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 <div id="root"></div>
